--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "zookeepr",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/irvingjem/zookeepr.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/irvingjem/zookeepr/issues"
-  },
-  "homepage": "https://github.com/irvingjem/zookeepr#readme",
-  "dependencies": {
-    "express": "^4.17.3"
-  }
+    "name": "zookeepr",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "scripts": {
+        "test": "jest",
+        "start": "node server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/irvingjem/zookeepr.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/irvingjem/zookeepr/issues"
+    },
+    "homepage": "https://github.com/irvingjem/zookeepr#readme",
+    "dependencies": {
+        "express": "^4.17.3",
+        "jest": "^27.5.1"
+    }
 }
